erDiagram
    USUARIOS {
        int id PK
        string nombre
        string apellido
        string email
        string password_hash
        string telefono
        string rol
        int puntos_fidelizacion
        bool activo
        datetime created_at
        datetime updated_at
    }

    HUESPEDES {
        int id PK
        int id_usuario FK
        string documento_id
        string tipo_documento
        text preferencias
        datetime created_at
        datetime updated_at
    }

    HABITACIONES {
        int id PK
        string numero
        string tipo
        text descripcion
        numeric precio_noche
        int capacidad
        int piso
        string estado
        bool activo
        datetime created_at
        datetime updated_at
    }

    RESERVAS {
        int id PK
        int id_huesped FK
        int id_habitacion FK
        datetime fecha_reserva
        date fecha_entrada
        date fecha_salida
        int noches
        numeric subtotal
        numeric impuestos
        numeric total
        string estado
        string motivo_cancelacion
        datetime created_at
        datetime updated_at
    }

    CHECKIN_CHECKOUT {
        int id PK
        int id_reserva FK
        datetime fecha_checkin
        datetime fecha_checkout
        int realizado_por FK
        datetime created_at
        datetime updated_at
    }

    FACTURAS {
        int id PK
        int id_reserva FK
        datetime fecha_emision
        numeric subtotal
        numeric impuestos
        numeric servicios_adicionales_total
        numeric total
        string estado
        string pdf_path
        datetime created_at
        datetime updated_at
    }

    PAGOS {
        int id PK
        int id_reserva FK
        datetime fecha
        numeric monto
        string metodo
        string tipo
        string estado
        string referencia_externa
        datetime created_at
        datetime updated_at
    }

    REEMBOLSOS {
        int id PK
        int id_pago FK
        datetime fecha
        numeric monto
        string motivo
        string estado
        datetime created_at
        datetime updated_at
    }

    PUNTOS_FIDELIDAD {
        int id PK
        int id_huesped FK
        int id_reserva FK "nullable — canjes no requieren reserva"
        int puntos
        datetime fecha
        string concepto
    }

    SERVICIOS_ADICIONALES {
        int id PK
        int id_reserva FK
        string tipo
        string descripcion
        numeric costo
        datetime fecha_hora
        int duracion_minutos "default 60 — usado en validación Spa RF-11"
        datetime created_at
        datetime updated_at
    }

    NOTIFICACIONES {
        int id PK
        int id_reserva FK
        string tipo
        text mensaje
        datetime fecha_envio
        bool enviado
        datetime created_at
        datetime updated_at
    }

    %% Relaciones
    USUARIOS ||--|| HUESPEDES : "perfil_de"
    HUESPEDES ||--o{ RESERVAS : "hace"
    HABITACIONES ||--o{ RESERVAS : "tiene"
    RESERVAS ||--|| CHECKIN_CHECKOUT : "checkin_registro"
    RESERVAS ||--|| FACTURAS : "genera"
    RESERVAS ||--o{ PAGOS : "recibe"
    PAGOS ||--|| REEMBOLSOS : "puede_tener"
    RESERVAS ||--o{ SERVICIOS_ADICIONALES : "incluye"
    RESERVAS ||--o{ NOTIFICACIONES : "genera"
    HUESPEDES ||--o{ PUNTOS_FIDELIDAD : "acumula"
    RESERVAS ||--o{ PUNTOS_FIDELIDAD : "genera_puntos"
    USUARIOS ||--o{ CHECKIN_CHECKOUT : "realiza"
